--- a/src/Pages/Neighborhood/Read.cshtml
+++ b/src/Pages/Neighborhood/Read.cshtml
@@ -1,15 +1,16 @@
 ﻿@page
 @model LetsGoSEA.WebSite.Pages.Neighborhood.ReadModel
-<!--CRUDI: ReadModel page to show: contains data of the selected neighborhood-->
+
 @{
     ViewData["Title"] = "ReadModel Page";
     Layout = "Shared/_Layout";
 }
 
+<!--CRUDI: ReadModel page to show: contains data of the selected neighborhood-->
 <h1>Read</h1>
 
 <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-    @{var neighborhoodImages = @Model.Neighborhood.Image.Split(',');}
+    @{var neighborhoodImages = @Model.neighborhood.image.Split(',');}
     @if (neighborhoodImages.Length != 1)
     {
         <ol class="carousel-indicators">
@@ -20,27 +21,27 @@
             }
         </ol>
     }
-<div class="carousel-inner">
-    <div class="carousel-item active">
-        <img src="@neighborhoodImages.First()" class="d-block carousel-img" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-            <h5>@Model.Neighborhood.Name</h5>
-            <p>@Model.Neighborhood.ShortDesc</p>
-        </div>
-    </div>
-    @if (neighborhoodImages.Length != 1)
-    {
-        @foreach (var neighborhoodImage in @neighborhoodImages.Skip(1).ToArray())
-        {
-            <div class="carousel-item">
-                <img src="@neighborhoodImage" class="d-block carousel-img" alt="...">
-                <div class="carousel-caption">
-                    <h5>@Model.Neighborhood.Name</h5>
-                    <p>@Model.Neighborhood.ShortDesc</p>
-                </div>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="@neighborhoodImages.First()" class="d-block carousel-img" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>@Model.neighborhood.name</h5>
+                <p>@Model.neighborhood.shortDesc</p>
             </div>
+        </div>
+        @if (neighborhoodImages.Length != 1)
+        {
+            @for (var i = 1; i < neighborhoodImages.Length; i++)
+            {
+                <div class="carousel-item">
+                    <img src="@Model.neighborhood.imagePath" class="d-block carousel-img" alt="...">
+                    <div class="carousel-caption">
+                        <h5>@Model.neighborhood.name</h5>
+                        <p>@Model.neighborhood.shortDesc</p>
+                    </div>
+                </div>
+            }
         }
-    }
     </div>
     @if (neighborhoodImages.Length != 1)
     {
@@ -59,8 +60,8 @@
 <br />
 
 <div class="row">
-    <a asp-page="Update" asp-route-id="@Model.Neighborhood.Id" class="btn btn-primary">Update</a> &nbsp; &nbsp;
-    <a asp-page="Delete" asp-route-id="@Model.Neighborhood.Id" class="btn btn-danger">Delete</a>
+    <a asp-page="Update" asp-route-id="@Model.neighborhood.id" class="btn btn-primary">Update</a> &nbsp; &nbsp;
+    <a asp-page="Delete" asp-route-id="@Model.neighborhood.id" class="btn btn-danger">Delete</a>
 </div>
 
 <br />
