--- a/src/Pages/Neighborhood/Update.cshtml
+++ b/src/Pages/Neighborhood/Update.cshtml
@@ -2,59 +2,59 @@
 @using LetsGoSEA.WebSite.Services
 @inject NeighborhoodService NeighborhoodService
 @model LetsGoSEA.WebSite.Pages.Neighborhood.UpdateModel
-<!--CRUDI: Update page to show: Form for updating neighborhood-->
 
 @{
     ViewData["Title"] = "Update page";
 }
-
+    
+<!--CRUDI: Update page to show: Form for updating neighborhood-->
 <h1>Update</h1>
 
 <div class="container">
     <form method="post">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        @Html.HiddenFor(x => x.Neighborhood.Id)
+        @Html.HiddenFor(x => x.neighborhood.id)
 
         <div class="form-group">
-            <label asp-for="Neighborhood.Id" class="control-label"></label>
-            <input asp-for="Neighborhood.Id" class="form-control" readonly/>
-            <span asp-validation-for="Neighborhood.Id" class="text-danger"></span>
+            <label asp-for="neighborhood.id" class="control-label"></label>
+            <input asp-for="neighborhood.id" class="form-control" readonly />
+            <span asp-validation-for="neighborhood.id" class="text-danger"></span>
         </div>
 
         <div class="form-group">
-            <label asp-for="Neighborhood.Name" class="control-label"></label>
-            <input asp-for="Neighborhood.Name" class="form-control" />
-            <span asp-validation-for="Neighborhood.Name" class="text-danger"></span>
+            <label asp-for="neighborhood.name" class="control-label"></label>
+            <input asp-for="neighborhood.name" class="form-control" />
+            <span asp-validation-for="neighborhood.name" class="text-danger"></span>
         </div>
 
         <div class="form-group">
-            <label asp-for="Neighborhood.Image" class="control-label"></label>
-            <input asp-for="Neighborhood.Image" class="form-control" />
-            <span asp-validation-for="Neighborhood.Image" class="text-danger"></span>
+            <label asp-for="neighborhood.image" class="control-label"></label>
+            <input asp-for="neighborhood.image" class="form-control" />
+            <span asp-validation-for="neighborhood.image" class="text-danger"></span>
         </div>
 
         <div class="form-group">
-            <label asp-for="Neighborhood.City" class="control-label"></label>
-            <input asp-for="Neighborhood.City" class="form-control" readonly disabled/>
-            <span asp-validation-for="Neighborhood.City" class="text-danger"></span>
+            <label asp-for="neighborhood.city" class="control-label"></label>
+            <input asp-for="neighborhood.city" class="form-control" readonly disabled />
+            <span asp-validation-for="neighborhood.city" class="text-danger"></span>
         </div>
 
         <div class="form-group">
-            <label asp-for="Neighborhood.State" class="control-label"></label>
-            <input asp-for="Neighborhood.State" class="form-control" readonly disabled/>
-            <span asp-validation-for="Neighborhood.State" class="text-danger"></span>
-        </div>
-        
-        <div class="form-group">
-            <label asp-for="Neighborhood.Address" class="control-label"></label>
-            <input asp-for="Neighborhood.Address" class="form-control" />
-            <span asp-validation-for="Neighborhood.Address" class="text-danger"></span>
+            <label asp-for="neighborhood.city" class="control-label"></label>
+            <input asp-for="neighborhood.state" class="form-control" readonly disabled />
+            <span asp-validation-for="neighborhood.state" class="text-danger"></span>
         </div>
 
         <div class="form-group">
-            <label asp-for="Neighborhood.ShortDesc" class="control-label"></label>
-            <input asp-for="Neighborhood.ShortDesc" class="form-control" />
-            <span asp-validation-for="Neighborhood.ShortDesc" class="text-danger"></span>
+            <label asp-for="neighborhood.state" class="control-label"></label>
+            <input asp-for="neighborhood.address" class="form-control" />
+            <span asp-validation-for="neighborhood.address" class="text-danger"></span>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="neighborhood.address" class="control-label"></label>
+            <input asp-for="neighborhood.shortDesc" class="form-control" />
+            <span asp-validation-for="neighborhood.shortDesc" class="text-danger"></span>
         </div>
 
         <div class="form-group">
