Applied code standards in in Error.cshtml.cs

--- a/src/Pages/Error.cshtml
+++ b/src/Pages/Error.cshtml
@@ -12,7 +12,7 @@
 @if (Model.ShowRequestId)
 {
     <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
+        <strong>Request ID:</strong> <code>@Model.requestedId</code>
     </p>
 }
 
