--- a/src/Pages/Neighborhood/Create.cshtml
+++ b/src/Pages/Neighborhood/Create.cshtml
@@ -18,47 +18,61 @@
 
 
         <div class="form-group">
-            <label asp-for="neighborhood.name" class="control-label"></label>
+            <label asp-for="neighborhood.name" class="control-label">Neighborhood Name</label>
             <input asp-for="neighborhood.name" class="form-control" />
             <span asp-validation-for="neighborhood.name" class="text-danger"></span>
         </div>
 
+        <br />
+
         <div class="form-group">
-            <label asp-for="neighborhood.image" class="control-label"></label>
+            <label asp-for="neighborhood.image" class="control-label">Link to Neighborhood Image</label>
             <input asp-for="neighborhood.image" class="form-control" onblur="doesimageExist(this.value)" id="image-input" />
             <span asp-validation-for="neighborhood.image" class="text-danger"></span>
             <span class="text-danger visually-hidden" id="image-error-text">Please provide a valid image URL</span>
         </div>
 
+        <br />
+
         <div class="form-group">
-            <label asp-for="neighborhood.city" class="control-label"></label>
+            <label asp-for="neighborhood.city" class="control-label">City</label>
             <input asp-for="neighborhood.city" class="form-control" readonly value="Seattle" />
             @* <span asp-validation-for="neighborhood.City" class="text-danger"></span> *@
         </div>
 
+        <br />
+
         <div class="form-group">
-            <label asp-for="neighborhood.state" class="control-label"></label>
+            <label asp-for="neighborhood.state" class="control-label">State</label>
             <input asp-for="neighborhood.state" class="form-control" readonly value="WA" />
             @* <span asp-validation-for="neighborhood.State" class="text-danger"></span> *@
         </div>
 
+        <br />
+
         <div class="form-group">
-            <label asp-for="neighborhood.address" class="control-label"></label>
+            <label asp-for="neighborhood.address" class="control-label">Address eg. "401 NE Northgate Way, Seattle, WA 98125"</label>
             <input asp-for="neighborhood.address" class="form-control" />
             <span asp-validation-for="neighborhood.address" class="text-danger"></span>
         </div>
 
+        <br />
+
         <div class="form-group">
-            <label asp-for="neighborhood.shortDesc" class="control-label"></label>
+            <label asp-for="neighborhood.shortDesc" class="control-label">Short Descripton</label>
             <input asp-for="neighborhood.shortDesc" class="form-control" />
             <span asp-validation-for="neighborhood.shortDesc" class="text-danger"></span>
         </div>
 
+        <br />
+
         <!--Allow user to upload a photo-->
         <div>
-            <label asp-for="neighborhood.image"></label>
+            <label asp-for="neighborhood.image">Upload a Photo!</label>
             <input type="file" name="files" class="form-control">
         </div>
+
+        <br />
 
         <div class="form-group">
             <input type="submit" value="Save" class="btn btn-primary" id="save" />
