--- a/src/Pages/Explore/Index.cshtml
+++ b/src/Pages/Explore/Index.cshtml
@@ -117,10 +117,10 @@
             // Iterate over each element to find the one matching the search string
             $(".card").each(function () {
                 // Find the title of each card
-                let neighborhoodname = $(this).find("h5.card-title").text().toLowerCase();
+                let neighborhoodName = $(this).find("h5.card-title").text().toLowerCase();
 
                 // If the search string doesn't match, hide the card
-                if (neighborhoodname.indexOf(searchString) === -1) {
+                if (neighborhoodName.indexOf(searchString) === -1) {
                     $(this).parent().fadeOut("fast");
                 }
                 else {
@@ -135,8 +135,8 @@
         $(filterButtonDesc).click(() => {
             // function to sort cards by rating in descending order
             function cardSort(x, y) {
-                x = parseFloat($(x).find("span.avg-rating").attr("avg-rating"));
-                y = parseFloat($(y).find("span.avg-rating").attr("avg-rating"));
+                x = parseFloat($(x).find("span.avg-rating").attr("avg-rating")).toFixed(2);
+                y = parseFloat($(y).find("span.avg-rating").attr("avg-rating")).toFixed(2);
                 //returns the larger of the two avg ratings
                 return ((x < y) ? -1 : ((x > y) ? 1 : 0));
             }
@@ -155,8 +155,8 @@
 
             function cardSort(x, y) {
                 // finds average ratings of cards 
-                x = parseFloat($(x).find("span.avg-rating").attr("avg-rating"));
-                y = parseFloat($(y).find("span.avg-rating").attr("avg-rating"));
+                x = parseFloat($(x).find("span.avg-rating").attr("avg-rating")).toFixed(2);
+                y = parseFloat($(y).find("span.avg-rating").attr("avg-rating")).toFixed(2);
 
                 // compares both and returns the smaller value
                 return ((x > y) ? -1 : ((x < y) ? 1 : 0));
