--- a/src/Pages/Neighborhood/Read.cshtml
+++ b/src/Pages/Neighborhood/Read.cshtml
@@ -9,13 +9,16 @@
 <!--CRUDI: ReadModel page to show: contains data of the selected neighborhood-->
 <h1>Read</h1>
 
+<!--Show images-->
 <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-    @{var neighborhoodImages = @Model.neighborhood.image.Split(',');}
-    @if (neighborhoodImages.Length != 1)
+    @{
+        var neighborhoodImages = @Model.allImages;
+    }
+    @if (neighborhoodImages.Count() != 1)
     {
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-            @for (var i = 1; i < neighborhoodImages.Length; i++)
+            @for (var i = 1; i < neighborhoodImages.Count(); i++)
             {
                 <li data-target="#carouselExampleCaptions" data-slide-to="@i"></li>
             }
@@ -25,25 +28,26 @@
         <div class="carousel-item active">
             <img src="@neighborhoodImages.First()" class="d-block carousel-img" alt="...">
             <div class="carousel-caption d-none d-md-block">
-                <h5>@Model.neighborhood.name</h5>
-                <p>@Model.neighborhood.shortDesc</p>
-            </div>
+                    <h5>@Model.neighborhood.name</h5>
+                    <p>@Model.neighborhood.shortDesc</p>
+                </div>
         </div>
-        @if (neighborhoodImages.Length != 1)
+        @if (neighborhoodImages.Count() != 1)
         {
-            @for (var i = 1; i < neighborhoodImages.Length; i++)
+            @foreach (var neighborhoodImage in @neighborhoodImages.Skip(1).ToArray())
             {
                 <div class="carousel-item">
-                    <img src="@Model.neighborhood.imagePath" class="d-block carousel-img" alt="...">
+                    <img src="@neighborhoodImage" class="d-block carousel-img" alt="...">
                     <div class="carousel-caption">
-                        <h5>@Model.neighborhood.name</h5>
-                        <p>@Model.neighborhood.shortDesc</p>
-                    </div>
+                            <h5>@Model.neighborhood.name</h5>
+                            <p>@Model.neighborhood.shortDesc</p>
+                        </div>
                 </div>
             }
         }
+
     </div>
-    @if (neighborhoodImages.Length != 1)
+    @if (neighborhoodImages.Count() != 1)
     {
         <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -55,6 +59,8 @@
         </a>
     }
 </div>
+<hr class="my-4" />
+<p>@Model.neighborhood.shortDesc</p>
 
 <br />
 <br />
