--- a/src/Pages/Neighborhood/Create.cshtml
+++ b/src/Pages/Neighborhood/Create.cshtml
@@ -75,6 +75,7 @@
         <br />
 
         <div class="form-group">
+            <a type="button" value="Cancel" class="= btn btn-primary" asp-page="/Neighborhood/Index">Cancel</a> 
             <input type="submit" value="Save" class="btn btn-primary" id="save" />
         </div>
     </form>
