Added cancel button on Delete.cshtml

--- a/src/Pages/Neighborhood/Delete.cshtml
+++ b/src/Pages/Neighborhood/Delete.cshtml
@@ -46,6 +46,7 @@
 
         <h1>Confirm Delete of this item</h1>
         <div class="form-group">
+            <a type="button" value="Cancel" class="= btn btn-primary" asp-page="/Neighborhood/Index">Cancel</a>
             <input type="submit" value="Delete" class="btn btn-primary" />
         </div>
     </form>
