--- a/src/Pages/Neighborhood/Update.cshtml
+++ b/src/Pages/Neighborhood/Update.cshtml
@@ -72,6 +72,7 @@
         <br />
 
         <div class="form-group">
+            <a type="button" value="Cancel" class="= btn btn-primary" asp-page="/Neighborhood/Index">Cancel</a> 
             <input type="submit" value="Save" class="btn btn-primary" />
         </div>
     </form>
