--- a/src/Pages/Neighborhood/Create.cshtml
+++ b/src/Pages/Neighborhood/Create.cshtml
@@ -66,10 +66,10 @@
 
         <br />
 
-        <!--Allow user to upload a photo-->
+        <!--Allow user to upload photo(s)-->
         <div>
-            <label asp-for="neighborhood.image">Upload a Photo!</label>
-            <input type="file" name="files" class="form-control">
+            <label asp-for="neighborhood.image">Upload Photo(s)! (If multiple photos, select them all to upload)</label>
+            <input type="file" name="files" class="form-control" multiple>
         </div>
 
         <br />
