--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -67,7 +67,7 @@ for details on configuring this project to bundle and minify static web assets. 
 a.navbar-brand {
     white-space: normal;
     font-family: 'Montserrat', sans-serif;
-    font-size: xx-large;
+    font-size: 240%;
     text-align: center;
     word-break: break-all;
 }
