Change word-break behavior of nav brand in site.css

--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -69,7 +69,7 @@ a.navbar-brand {
     font-family: 'Montserrat', sans-serif;
     font-size: 240%;
     text-align: center;
-    word-break: break-all;
+    word-break: normal;
 }
 
 /* Provide sufficient contrast against white background */
