--- a/src/Pages/Error.cshtml
+++ b/src/Pages/Error.cshtml
@@ -5,24 +5,14 @@
 @{
     ViewData["Title"] = "Error";
 }
-
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
-
-@if (Model.ShowRequestId)
-{
-    <p>
-        <strong>Request ID:</strong> <code>@Model.requestedId</code>
-    </p>
-}
-
-<h3>Development Mode</h3>
-<p>
-    Swapping to the <strong>Development</strong> environment displays detailed information about the error that occurred.
-</p>
-<p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
-</p>
+<div class="container">
+<div id="not-found">
+    <div class="not-found">
+        <div class="not-found-404">
+            <h1>Oops!</h1>
+            <h2>404 - The Page can't be found</h2>
+        </div>
+        <a href="/">Go TO Homepage</a>
+    </div>
+</div>    
+</div>
