Fix class name typo in Index.cshtml

--- a/src/Pages/Explore/Index.cshtml
+++ b/src/Pages/Explore/Index.cshtml
@@ -74,7 +74,7 @@
                         if (neighborhood.ratings != null)
                         {
                             <span class="avg-rating" avg-rating="@neighborhood.ratings.Average()">
-                                @neighborhood.ratings.Average().ToString("0.00")<i class="fa fa-star" id="expore-page-star"></i>
+                                @neighborhood.ratings.Average().ToString("0.00")<i class="fa fa-star" id="explore-page-star"></i>
                             </span>
                         }
                         else
